Fix HTML structure and update image paths

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HillTown</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +13,7 @@
 
 <body>
     <div id="main">
-        <img src="./images/resort.jpg" alt="">
+        <img src="resort.jpg" alt="">
         <div class="image-overlay"></div>
         <div id="nav">
             <div id="nav-up">
@@ -33,7 +33,7 @@
 
             <div id="nav-down">
                 <div id="logo">
-                    <img src="images/ResortLogoImg.png" alt="">
+                    <img src="ResortLogoImg.png" alt="">
                     <h3>HillTown <span>Resort</span></h3>
                 </div>
                 <div id="objects">
@@ -93,5 +93,6 @@
     <script src="script.js"></script>
 
 </body>
+
 
 </html>
